<resources>
    <string name="app_name">Calender</string>
    <string name="meeting_details">%1$s: %2$s-%3$s (%4$d minutes)</string>
    <string name="meeting_date_template">%1$d/%2$d/%3$d</string>
    <string name="meeting_time_template">%1$d:%2$d</string>
    <string name="no_events_found_message">No Events Found \n Tap on "+" button to add an event</string>
    <string name="meeting_name">Meeting Name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="create">Create</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="err_meeting_title_missing">Please enter meeting title</string>
    <string name="err_meeting_start_time_missing">Please enter meeting start time</string>
    <string name="err_meeting_end_time_missing">Please enter meeting end time</string>
    <string name="err_meeting_end_time_before_start_time">Meeting end time cannot be before start time</string>
    <string name="msg_event_created">Event Created!</string>
</resources>
