<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_meeting_name"
        style="@style/EditTextHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meeting_name"
        app:boxBackgroundColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_meeting_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLength="100"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_meeting_date"
        style="@style/EditTextHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/meeting_date"
        app:boxBackgroundColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_meeting_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_meeting_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLength="100"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view_meeting_date"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_meeting_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_start_date_time"
        style="@style/EditTextHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/start_time"
        app:boxBackgroundColor="#000000"
        app:layout_constraintEnd_toStartOf="@id/til_end_date_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_meeting_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_start_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLength="100"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view_start_time"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/til_end_date_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_meeting_date" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_end_date_time"
        style="@style/EditTextHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/end_time"
        app:boxBackgroundColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_start_date_time"
        app:layout_constraintTop_toBottomOf="@id/til_meeting_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_end_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLength="100"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view_end_time"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_start_date_time"
        app:layout_constraintTop_toBottomOf="@id/til_meeting_date" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button_3dp_primary"
        android:text="@string/create"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_start_date_time" />

</androidx.constraintlayout.widget.ConstraintLayout>
